# ComputerGraphicsCourse

cw1/2/: PainterApplication.sln
cw1/2/Fill/: BrushTool.cs  FillTool.cs  ITool.cs  MainWindow.xaml  MainWindow.xaml.cs  NoTool.cs  Paintshop.csproj
cw1/3+4/: MovingStuff.sln
cw1/3+4/Fill/: App.xaml  App.xaml.cs  Ball.cs  BrushTool.cs  IActor.cs  IBody.cs  IRenderable.cs  MainWindow.xaml  MainWindow.xaml.cs  MovingStuff.csproj  World.cs
cw1/3+4/Fill/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
cw2/: PainterApplication.sln
cw2/Fill/: App.xaml.cs  FillTool.cs  ITool.cs  MainWindow.xaml  MainWindow.xaml.cs  Paintshop.csproj
cw3/Fill/: BorderDetectionTool.cs  MainWindow.xaml  MainWindow.xaml.cs  Paintshop.csproj
cw4/Fill/: LineTool.cs  MainWindow.xaml  MainWindow.xaml.cs  NoTool.cs  Paintshop.csproj
cw4/Fill/Properties/: AssemblyInfo.cs  Resources.Designer.cs
cw5/Fill/: App.xaml  BrushTool.cs  ChannelsTool.cs  ChannelsWindow.xaml  ChannelsWindow.xaml.cs  GrayscaleTool.cs  HSVTool.cs  HSVWindow.xaml  HSVWindow.xaml.cs  IFilter.cs  ITool.cs  MainWindow.xaml  MainWindow.xaml.cs  Paintshop.csproj
cw5/Fill/Properties/: Resources.Designer.cs  Settings.Designer.cs
cw7/: Edge.scala  Main.scala  Polygon.scala
ind1/: Circumcircle.scala  Config.scala  Delaunay.scala  Edge.scala  Main.scala  Polygon.scala  build.sbt  project.sublime-workspace
ind2/: CMakeLists.txt  main.cpp
